# eid-revocation-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
accumulator/: Cargo.toml  README.md
accumulator/src/: accumulator.rs  error.rs  key.rs  lib.rs  macros.rs  main.rs  proof.rs  utils.rs  witness.rs
benches/: issuer.rs  updates.rs  verification.rs
entities/: Cargo.toml
entities/benches/: issuer.rs  updates.rs  verification.rs
entities/src/: holder.rs  issuer.rs  lib.rs  verifier.rs
network/: Cargo.toml  README.md
network/src/: base_registry.rs  client.rs  controller.rs  lib.rs  macros.rs  main.rs  server.rs
