[package]
name = "eid-revocation-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version="1.37.0", features = ["full"]}
serde_json = "1.0.117"
reqwest = {version="0.12.4", features=["json"]}
bincode = "1.3.3"
serde = "1.0.202"
blsful = "2.5.7"
rand_core = {version = "0.6.4", features = ["std"] }
accumulator = { version = "0.1.0", path = "./accumulator" }
entities = { version = "0.1.0", path = "./entities" }
network = { version = "0.1.0", path = "./network" }
agora-allosaurus-rs = { git = "https://github.com/hyperledger-labs/agora-allosaurus-rs" }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"
serde_bare = "0.5"


[[bench]]
name = "updates"
harness = false

