[package]
name = "accumulator"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.9"
ff-zeroize = "0.6"
hex = "0.4"
hkdf = "0.9"
rand = "0.7"
rayon = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
serde_json = "1.0.117"
bls12_381_plus = "0.8.15"
rand_core = {version = "0.6.4", features = ["std"] }
group = "0.13.0"
digest = "0.10.7"
sha3 = "0.10.8"
zeroize = "1.8.1"
merlin = "3.0.0"
bincode = "1.3.3"
ark-ff = "0.4.2"
